--- a/lottery.css
+++ b/lottery.css
@@ -132,10 +132,10 @@ position: absolute;
 }
 @media(max-width:400px){
     .sad{
-        font-size: 23px
+        font-size: 23px;
     }
     .sae{
-       font-size: 17px 
+       font-size: 17px; 
     }
 .cane{
     display: block;
@@ -165,4 +165,4 @@ position: absolute;
         width:100%;
     }
 }
-}
+
